tests/baselines/reference/parserMemberAccessorDeclaration8.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration8.ts(2,19): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration8.ts(2,23): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration8.ts (2 errors) ====
    class C {
        static static get Foo() { }
                      ~~~
!!! error TS1005: ';' expected.
                          ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }